--- a/SharedPreferences/app/src/main/res/values/strings.xml
+++ b/SharedPreferences/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">SharedPreferences</string>
+    <string name="qualquer">Digite uma string qualquer:</string>
 </resources>
